reflect-demo/src/tests/snapshots/reflect_demo__tests__generics__struct_with_nested_generic_struct_twice-2.snap
---
source: reflect-demo/src/tests/generics.rs
expression: "super::into_input_typescript_code::<TestStructWithNestedGenericStructTwice>()"
---
// DO NOT MODIFY THIS FILE MANUALLY
// This file was generated by reflect-cli
//
// Schema name: 
// 




/// 8-bit unsigned integer
export type u8 = TODO;


export namespace reflect {

/// Struct object with no fields
export interface Empty {
    }


/// Error object which is expected to be never returned
export interface Infallible {
    }

}

export namespace reflect_demo {

export namespace tests {

export namespace generics {

export interface TestStructWithNestedGenericStructTwice {
    _f: reflect_demo.tests.generics.TestStructWithSimpleGeneric<u8>;
    _f2: reflect_demo.tests.generics.TestStructWithSimpleGeneric<std.String>;
    }


export interface TestStructWithSimpleGeneric<A> {
    _f: A;
    }

}
}
}

export namespace std {

/// UTF-8 encoded string
export type String = string;

}
