reflect-demo/src/tests/snapshots/reflect_demo__tests__generics__struct_with_nested_generic_struct_twice.snap
---
source: reflect-demo/src/tests/generics.rs
expression: "TestStructWithNestedGenericStructTwice::reflect_input()"
---
{
  "name": "",
  "types": [
    {
      "kind": "struct",
      "name": "reflect_demo::tests::generics::TestStructWithNestedGenericStructTwice",
      "fields": [
        {
          "name": "_f",
          "type": {
            "name": "reflect_demo::tests::generics::TestStructWithSimpleGeneric",
            "parameters": [
              {
                "name": "u8"
              }
            ]
          }
        },
        {
          "name": "_f2",
          "type": {
            "name": "reflect_demo::tests::generics::TestStructWithSimpleGeneric",
            "parameters": [
              {
                "name": "std::string::String"
              }
            ]
          }
        }
      ]
    },
    {
      "kind": "struct",
      "name": "reflect_demo::tests::generics::TestStructWithSimpleGeneric",
      "parameters": [
        {
          "name": "A"
        }
      ],
      "fields": [
        {
          "name": "_f",
          "type": {
            "name": "A"
          }
        }
      ]
    },
    {
      "kind": "primitive",
      "name": "std::string::String",
      "description": "UTF-8 encoded string"
    },
    {
      "kind": "primitive",
      "name": "u8",
      "description": "8-bit unsigned integer"
    }
  ]
}
