reflect-demo/src/tests/snapshots/reflect_demo__tests__generics__struct_with_simple_generic.snap
---
source: reflect-demo/src/tests/generics.rs
expression: "super::into_input_schema::<TestStructWithSimpleGeneric<u8>>().input_types"
---
{
  "types": [
    {
      "kind": "struct",
      "name": "reflect::Empty",
      "description": "Struct object with no fields"
    },
    {
      "kind": "struct",
      "name": "reflect_demo::tests::generics::TestStructWithSimpleGeneric",
      "parameters": [
        {
          "name": "A"
        }
      ],
      "fields": [
        {
          "name": "_f",
          "type": {
            "name": "A"
          },
          "required": true
        }
      ]
    },
    {
      "kind": "primitive",
      "name": "u8",
      "description": "8-bit unsigned integer"
    }
  ]
}
