reflect-demo/src/tests/snapshots/reflect_demo__tests__generics__struct_with_vec_generic-2.snap
---
source: reflect-demo/src/tests/generics.rs
expression: "super::into_input_typescript_code::<TestStructWithVecGeneric<u8>>()"
---
// DO NOT MODIFY THIS FILE MANUALLY
// This file was generated by reflect-cli
//
// Schema name: 
// 




export namespace reflect {

/// Struct object with no fields
export interface Empty {
    }


/// Error object which is expected to be never returned
export interface Infallible {
    }

}

export namespace reflect_demo {

export namespace tests {

export namespace generics {

export interface TestStructWithVecGeneric<T> {
    _f: Array<T>;
    }

}
}
}
