reflect-demo/src/tests/snapshots/reflect_demo__tests__generics__struct_with_vec_generic.snap
---
source: reflect-demo/src/tests/generics.rs
expression: "TestStructWithVecGeneric::<u8>::reflect_input()"
---
[
  {
    "name": "reflect_demo::tests::generics::TestStructWithVecGeneric",
    "parameters": [
      {
        "name": "u8"
      }
    ]
  },
  {
    "name": "",
    "types": [
      {
        "kind": "struct",
        "name": "reflect_demo::tests::generics::TestStructWithVecGeneric",
        "parameters": [
          {
            "name": "T"
          }
        ],
        "fields": [
          {
            "name": "_f",
            "type": {
              "name": "std::vec::Vec",
              "parameters": [
                {
                  "name": "T"
                }
              ]
            }
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "std::vec::Vec",
        "description": "Expandable array type",
        "parameters": [
          {
            "name": "T"
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "u8",
        "description": "8-bit unsigned integer"
      }
    ]
  }
]
