reflect-demo/src/tests/snapshots/reflect_demo__tests__generics__struct_with_vec_generic_generic.snap
---
source: reflect-demo/src/tests/generics.rs
expression: "super::into_input_schema::<TestStructWithVecGenericGeneric<u8>>().input_types"
---
{
  "types": [
    {
      "kind": "struct",
      "name": "reflect::Empty",
      "description": "Struct object with no fields"
    },
    {
      "kind": "struct",
      "name": "reflect_demo::tests::generics::TestStructWithSimpleGeneric",
      "parameters": [
        {
          "name": "A"
        }
      ],
      "fields": [
        {
          "name": "_f",
          "type": {
            "name": "A"
          },
          "required": true
        }
      ]
    },
    {
      "kind": "struct",
      "name": "reflect_demo::tests::generics::TestStructWithVecGenericGeneric",
      "parameters": [
        {
          "name": "T"
        }
      ],
      "fields": [
        {
          "name": "_f",
          "type": {
            "name": "std::vec::Vec",
            "parameters": [
              {
                "name": "reflect_demo::tests::generics::TestStructWithSimpleGeneric",
                "parameters": [
                  {
                    "name": "T"
                  }
                ]
              }
            ]
          },
          "required": true
        }
      ]
    },
    {
      "kind": "primitive",
      "name": "std::vec::Vec",
      "description": "Expandable array type",
      "parameters": [
        {
          "name": "T"
        }
      ]
    },
    {
      "kind": "primitive",
      "name": "u8",
      "description": "8-bit unsigned integer"
    }
  ]
}
